--- a/web/business/orders/orders.html
+++ b/web/business/orders/orders.html
@@ -29,19 +29,19 @@
             <td>1</td>
             <td>Demon</td>
             <td>$25</td>
-            <td><a href="#order/details">详情</a></td>
+            <td><a ng-click="open()">详情</a></td>
         </tr>
         <tr>
             <td>2</td>
             <td>Demon</td>
             <td>$25</td>
-            <td><a href="#order/details">详情</a></td>
+            <td><a ng-click="open()">详情</a></td>
         </tr>
         <tr>
             <td>3</td>
             <td>Demon</td>
             <td>$25</td>
-            <td><a href="#order/details">详情</a></td>
+            <td><a ng-click="open()">详情</a></td>
         </tr>
         </tbody>
     </table>
