--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../css/metisMenu.min.css">
     <link rel="stylesheet" href="../css/demo.css">
+    <style>
+        .page-list .pagination {float:left;}
+        .page-list .pagination span {cursor: pointer;}
+        .page-list .pagination .separate span{cursor: default; border-top:none;border-bottom:none;}
+        .page-list .pagination .separate span:hover {background: none;}
+        .page-list .page-total {float:left; margin: 25px 20px;}
+        .page-list .page-total input, .page-list .page-total select{height: 26px; border: 1px solid #ddd;}
+        .page-list .page-total input {width: 40px; padding-left:3px;}
+        .page-list .page-total select {width: 50px;}
+    </style>
 </head>
 <body ng-controller="scotchController">
     <div ng-include="'layout/header.html'"></div>
@@ -23,6 +33,7 @@
     <script src="../js/lib/angular.min.js"></script>
     <script src="../js/lib/angular-route.min.js"></script>
     <script src="http://cdn.bootcss.com/angular-ui-bootstrap/0.11.2/ui-bootstrap-tpls.js"></script>
+    <script src="../js/lib/pagination.js"></script>
     <script src="../js/script.js"></script>
 </body>
 </html>
