添加分页及修改模态框

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="../css/metisMenu.min.css">
-    <link rel="stylesheet" href="../css/demo.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/metisMenu.min.css">
+    <link rel="stylesheet" href="css/demo.css">
     <style>
         .page-list .pagination {float:left;}
         .page-list .pagination span {cursor: pointer;}
@@ -19,21 +19,21 @@
     </style>
 </head>
 <body ng-controller="scotchController">
-    <div ng-include="'layout/header.html'"></div>
+    <div ng-include="'web/layout/header.html'"></div>
     <div class="container-fluid">
         <div class="row">
-            <div ng-include="'layout/menu.html'"></div>
+            <div ng-include="'web/layout/menu.html'"></div>
             <!--<ng-include src="'layout/menu.html'"></ng-include>-->
-            <div ng-include="'layout/main.html'"></div>
+            <div ng-include="'web/layout/main.html'"></div>
         </div>
     </div>
-    <script src="../js/lib/jquery.min.js"></script>
-    <script src="../js/lib/metisMenu.min.js"></script>
-    <script src="../js/lib/bootstrap.min.js"></script>
-    <script src="../js/lib/angular.min.js"></script>
-    <script src="../js/lib/angular-route.min.js"></script>
-    <script src="http://cdn.bootcss.com/angular-ui-bootstrap/0.11.2/ui-bootstrap-tpls.js"></script>
-    <script src="../js/lib/pagination.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="js/lib/jquery.min.js"></script>
+    <script src="js/lib/metisMenu.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
+    <script src="js/lib/angular.min.js"></script>
+    <script src="js/lib/angular-route.min.js"></script>
+    <script src="js/lib/ui-bootstrap-tpls.js"></script>
+    <script src="js/lib/pagination.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
