--- a/web/business/orders/orders.html
+++ b/web/business/orders/orders.html
@@ -1,13 +1,12 @@
 <div class="row">
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-sm-3 col-md-3 col-xs-3">
             <div class="input-group">
                 <span class="input-group-addon">OrderNo：</span>
                 <input class="form-control">
             </div>
         </div>
-        <div class="col-md-7"></div>
-        <div class="col-md-2">
+        <div class="col-sm-3 col-md-3 col-xs-3 col-xs-offset-6 col-sm-offset-6 col-md-offset-6">
             <button class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>&nbsp;Search</button>
             <button class="btn btn-success"><span class="glyphicon glyphicon-plus"></span>&nbsp;New</button>
         </div>
