--- a/web/index.html
+++ b/web/index.html
@@ -1,39 +1,82 @@
 <!DOCTYPE html>
-<html ng-app="scotchApp">
+<html ng-app="scotchApp" style="height: 100%;position: relative;overflow-x:hidden;">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="../css/metisMenu.min.css">
-    <link rel="stylesheet" href="../css/demo.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/metisMenu.min.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/demo.css">
     <style>
-        .page-list .pagination {float:left;}
-        .page-list .pagination span {cursor: pointer;}
-        .page-list .pagination .separate span{cursor: default; border-top:none;border-bottom:none;}
-        .page-list .pagination .separate span:hover {background: none;}
-        .page-list .page-total {float:left; margin: 25px 20px;}
-        .page-list .page-total input, .page-list .page-total select{height: 26px; border: 1px solid #ddd;}
-        .page-list .page-total input {width: 40px; padding-left:3px;}
-        .page-list .page-total select {width: 50px;}
+        .page-list .pagination {
+            float: left;
+        }
+
+        .page-list .pagination span {
+            cursor: pointer;
+        }
+
+        .page-list .pagination .separate span {
+            cursor: default;
+            border-top: none;
+            border-bottom: none;
+        }
+
+        .page-list .pagination .separate span:hover {
+            background: none;
+        }
+
+        .page-list .page-total {
+            float: left;
+            margin: 25px 20px;
+        }
+
+        .page-list .page-total input, .page-list .page-total select {
+            height: 26px;
+            border: 1px solid #ddd;
+        }
+
+        .page-list .page-total input {
+            width: 40px;
+            padding-left: 3px;
+        }
+
+        .page-list .page-total select {
+            width: 50px;
+        }
     </style>
 </head>
-<body ng-controller="scotchController">
-    <div ng-include="'layout/header.html'"></div>
-    <div class="container-fluid">
-        <div class="row">
-            <div ng-include="'layout/menu.html'"></div>
-            <!--<ng-include src="'layout/menu.html'"></ng-include>-->
-            <div ng-include="'layout/main.html'"></div>
+<body ng-controller="scotchController" style="height: 100%;">
+<div ng-include="'layout/header.html'"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div ng-include="'layout/menu.html'"></div>
+        <!--<ng-include src="'layout/menu.html'"></ng-include>-->
+        <!--<div ng-include="'layout/main.html'"></div>-->
+        <div class="col-xs-10" style="height: 100%;margin-left: 17%;">
+            <div class="container-fluid">
+                <div class="row">
+                    <ol class="breadcrumb">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Order</a></li>
+                        <li class="active">List</li>
+                    </ol>
+                </div>
+                <br>
+                <div ui-view></div>
+            </div>
         </div>
     </div>
-    <script src="../js/lib/jquery.min.js"></script>
-    <script src="../js/lib/metisMenu.min.js"></script>
-    <script src="../js/lib/bootstrap.min.js"></script>
-    <script src="../js/lib/angular.min.js"></script>
-    <script src="../js/lib/angular-route.min.js"></script>
-    <script src="http://cdn.bootcss.com/angular-ui-bootstrap/0.11.2/ui-bootstrap-tpls.js"></script>
-    <script src="../js/lib/pagination.js"></script>
-    <script src="../js/script.js"></script>
+</div>
+<script src="js/lib/jquery.min.js"></script>
+<script src="js/lib/metisMenu.min.js"></script>
+<script src="js/lib/bootstrap.min.js"></script>
+<script src="js/lib/angular.min.js"></script>
+<script src="js/lib/angular-route.min.js"></script>
+<script src="js/lib/angular-ui-router.min.js"></script>
+<script src="http://cdn.bootcss.com/angular-ui-bootstrap/0.11.2/ui-bootstrap-tpls.js"></script>
+<script src="js/lib/pagination.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
